frontend/src/assets/styles/global.scss
* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html.no-forced-scrollbar {
  overflow-y: unset !important;
}

/* Custom utility classes */

.user-select-none {
  user-select: none;
}

.absolute-cover {
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.hide-pointer {
  cursor: none;
}

.pointer {
  cursor: pointer;
}

.cursor-none {
  cursor: none;
}

.pointer-events-none {
  pointer-events: none;
}

.pointer-events-all {
  pointer-events: all;
}

.link {
  cursor: pointer;
  color: inherit !important;
  text-decoration: none;
}

.link:hover {
  text-decoration: underline;
}

.flex-0 {
  flex: 0;
}

.pa-s {
  padding: env(safe-area-inset-top) env(safe-area-inset-right)
    env(safe-area-inset-bottom) env(safe-area-inset-left);
}

.pt-s {
  padding-top: env(safe-area-inset-top);
}

.pl-s {
  padding-left: env(safe-area-inset-left);
}

.pr-s {
  padding-right: env(safe-area-inset-right);
}

.pb-s {
  padding-bottom: env(safe-area-inset-bottom);
}

.text-capitalize-first-letter::first-letter {
  text-transform: uppercase;
}

.overflow-hidden {
  overflow: hidden;
}

.card-chip {
  position: absolute;
  top: 1em;
  right: 1em;
}

